# preprod

./: .eslintrc.json  package.json  pyproject.toml  scanner-run-config.yml  setup.py  sfdx-project.json  sfdx-scanner-config.json
.github/workflows/: analyze-dependencies.yml  dependency-analyzer.yml.yml  eslint.yml  rollback.yml  sfdxscanner.yml
.github/workflows/scripts/: analyze-dependencies.js
config/: project-scratch-def.json
custom-rules/pmd/: custom-pmd-ruleset.xml
force-app/: gitcommans
force-app/main/default/authproviders/: ACCUAT.authprovider-meta.xml  RELEASEQA.authprovider-meta.xml  SFS_AzureClientCreds.authprovider-meta.xml
force-app/main/default/classes/: ACCComponentsViewerController.cls  ACCComponentsViewerControllerTest.cls  AcceptEnvironmentRequestService.cls  AccessProvisioningService.cls  AccessProvisioningService.cls-meta.xml  AccessProvisioningServiceTest.cls  AccessRemovalService.cls  AccessRemovalServiceTest.cls  AccessRequestController.cls  AccessRequestControllerTest.cls  (+110 more)
manifest/: package.xml
rollback_system/: main.py
rollback_system/core/: __init__.py  rollback_processor.py
rollback_system/core/file_handlers/: __init__.py  apex_handler.py  xml_handler.py
rollback_system/core/models/: rollback_models.py
rollback_system/services/: __init__.py  conflict_service.py  git_service.py  validation_service.py
rollback_system/utils/: diff_utils.py  logger.py  xml_utils.py
salesforce_rollback.egg-info/: PKG-INFO  SOURCES 2.txt  entry_points.txt  requires 2.txt  top_level 2.txt
scripts/: analyze.ts  generate_plan.py
(+188 files in other folders)
